Prevent search result country from wrapping.

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ body {
 
 .search-country {
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
